--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <p>Correa ergonómica, display circular y materiales resistentes para uso diario.</p>
       </div>
       <div class="feature">
-        <h3>Símbolo de Lucha</h3>
-        <p>El morado representa la lucha contra la violencia de género. Komuna visibiliza tu voz.</p>
+        <h3>Seguridad y Confianza</h3>
+        <p>El azul y algunas tonalidades mezcladas con verde, asociados en la psicología del color a seguridad, confianza y tecnología. </p>
       </div>
       <div class="feature">
         <h3>Compromiso Ambiental</h3>
