--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.jpg" alt="Logo Komuna" style="height: 120px; margin-bottom: 1rem;">
-    <h1>Komuna</h1>
+    <img src="logo.jpg" alt="Logo Komuna" style="height: 200px; margin-bottom: 1rem;">
     <p>No estás solo, nosotros te acompañamos</p>
     <a href="#descargar" class="cta-button">Únete a Komuna</a>
   </header>
@@ -158,15 +157,15 @@
   </section>
 
   <section class="section">
-    <h2>Lo que dicen nuestras usuarias</h2>
+    <h2>Lo que dicen nuestros usuarios</h2>
     <div class="features">
       <div class="feature">
-        <p>“Desde que uso Komuna me siento más segura al volver a casa en la noche.”</p>
+        <p>“Desde que uso Komuna me siento más segura al volver a casa en la noche y tomando el bus.”</p>
         <strong>- Laura M., estudiante</strong>
       </div>
       <div class="feature">
         <p>“Es más que una pulsera, es saber que alguien está cerca si algo pasa.”</p>
-        <strong>- Camila G., ciclista urbana</strong>
+        <strong>- Felipe V., ciclista urbano</strong>
       </div>
     </div>
   </section>
@@ -174,7 +173,7 @@
   <section class="section">
     <h2>App integrada, comunidad activa</h2>
     <p>Desde tu celular puedes activar la red, gestionar tu grupo de apoyo y acceder a reportes en tiempo real.</p>
-    <img src="mockup_app.png" alt="Interfaz App Komuna" class="product-img">
+    <img src="interfaz.png" alt="Interfaz App Komuna" class="product-img">
   </section>
 
   <section class="section">
