--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@
 
       <label for="modelo">Modelo:</label><br>
       <select id="modelo" name="modelo">
-        <option value="standard">Standard</option>
-        <option value="plus">Plus</option>
-        <option value="morado">Morado edición lucha</option>
+        <option value="Azul">Azul</option>
+        <option value="Negro">Negro</option>
+        <option value="Verde">Verde</option>
+        <option value="Blanco">Blanco</option>
+        <option value="Morado">Edición Especial "Lucha contra la violencia de género"</option>
       </select><br><br>
 
       <label for="pago">Método de pago:</label><br>
