--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.jpg" alt="Logo Komuna" style="height: 200px; margin-bottom: 1rem;">
+    <img src="logo2.jpg" alt="Logo Komuna" style="height: 200px; margin-bottom: 1rem;">
     <p>No estás solo, nosotros te acompañamos</p>
     <a href="#descargar" class="cta-button">Únete a Komuna</a>
   </header>
@@ -215,13 +215,14 @@
         <option value="Negro">Negro</option>
         <option value="Verde">Verde</option>
         <option value="Blanco">Blanco</option>
-        <option value="Morado">Edición Especial "Lucha contra la violencia de género"</option>
+        <option value="Morado">Morado - Edición Especial "Lucha contra la violencia de género"</option>
       </select><br><br>
 
       <label for="pago">Método de pago:</label><br>
       <select id="pago" name="pago">
         <option value="nequi">Nequi</option>
         <option value="daviplata">Daviplata</option>
+        <option value="bancolombia">Bancolombia</option>
         <option value="efectivo">Efectivo contra entrega</option>
       </select><br><br>
 
