--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
   <header>
-    <img src="logo2.jpg" alt="Logo Komuna" style="height: 100px; margin-bottom: 1rem;">
+    <img src="logo.jpg" alt="Logo Komuna" style="height: 100px; max-width: 100%; margin-bottom: 1rem; display: block; margin-left: auto; margin-right: auto;">
     <p>No estás solo, nosotros te acompañamos</p>
     <a href="#descargar" class="cta-button">Únete a Komuna</a>
   </header>
